# fine-ai-service

./: .gitignore  README.md
docs/superpowers/plans/: 2026-04-25-stock-gateway-impl-plan.md  2026-04-25-stock-gateway-implementation-plan.md
docs/superpowers/specs/: 2026-04-25-stock-gateway-design.md
stock-gateway/: Cargo.toml  README.md  config.example.toml  config.toml  test_api.py
stock-gateway/src/: config.rs  error.rs  lib.rs  main.rs
stock-gateway/src/auth/: api_key.rs  jwt.rs  mod.rs
stock-gateway/src/db/: mod.rs  queries.rs
stock-gateway/src/http/: handlers.rs
stock-gateway/src/mcp/: tools.rs
stock-gateway/src/models/: mod.rs  stock.rs  user_api_key.rs
stock-gateway/src/rate_limit/: mod.rs  sliding_window.rs
stock-gateway/tests/: auth_tests.rs  http_handler_tests.rs  rate_limit_tests.rs
