[package]
name = "stock_gateway"
version = "0.1.0"
edition = "2021"

[lib]
name = "stock_gateway"
path = "src/lib.rs"

[dependencies]
# Web framework
salvo = { version = "0.76", features = ["cookie", "jwt-auth"] }
async-trait = "0.1"

# MCP protocol
rmcp = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"

# JWT
jsonwebtoken = "9"

# Rate limiting
dashmap = "5"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4"
