[package]
name = "stock_gateway"
version = "0.1.0"
edition = "2021"

[lib]
name = "stock_gateway"
path = "src/lib.rs"

[dependencies]
# Web framework
salvo = { version = "0.76", features = ["cookie", "jwt-auth", "server-handle"] }
async-trait = "0.1"

# MCP protocol
rmcp = { version = "1.5.0", features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
    "schemars",
] }
tokio-util = { version = "0.7" }

# Timer needed by hyper for header_read_timeout
hyper-util = { version = "0.1", features = ["tokio"] }

# HTTP types (needed for tower service bridging in McpHandler)
http = "1"
http-body-util = "0.1"
bytes = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"

# JWT
jsonwebtoken = "9"

# Rate limiting
dashmap = "5"

# Cache
lru = "0.12"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4"
